<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="10dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvReview"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/review"
            android:textColor="@color/title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="65dp"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edNhanXet"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:padding="20dp"
                android:hint="@string/tv_vietreview"
                android:background="@drawable/bg_edittext"/>


        </LinearLayout>

        <Button
            android:id="@+id/btn_sendReview"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="85dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#59B8EE"
            android:text="@string/tv_gui"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />
    </LinearLayout>

</LinearLayout>
